fix overlap in product detail page

--- a/static/css/signup.css
+++ b/static/css/signup.css
@@ -86,5 +86,5 @@ form {
 }
 
 .dialog {
-    z-index: 2;
+    z-index: 91;
 }
